src/main/java/com/example/app/error/exception/TechnicalException.java
package com.example.app.error.exception;

public class TechnicalException extends AppException {
    public TechnicalException(String message) {
        super(message);
    }
}
